# winstellar

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  README.md  SECURITY.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: fits_version.h.in
docs/: support-kb.md
fits_core/: CMakeLists.txt
fits_core/include/fits_core/: analysis.h  background.h  cache.h  fits_debayer.h  fits_headers.h  fits_image.h  fits_loader.h  fits_render.h  fits_stretch.h  image_limits.h  pixmath.h  psf.h  raw_loader.h  stats.h  xisf_loader.h
fits_core/src/: analysis.cpp  background.cpp  cache.cpp  fits_debayer.cpp  fits_headers.cpp  fits_loader.cpp  fits_render.cpp  fits_stretch.cpp  psf.cpp  raw_loader.cpp  xisf_loader.cpp
installer/: build_installer.cmd  build_installer.ps1  setup.iss
scripts/: build.cmd  build.ps1  bump_version.cmd  bump_version.ps1  check_env.cmd  check_env.ps1  create_dev_cert.cmd  create_dev_cert.ps1  dev_cycle.cmd  dev_cycle.ps1  register.cmd  register.ps1  release.cmd  release.ps1  test.ps1  unregister.cmd  unregister.ps1
shell_ext/: CMakeLists.txt
shell_ext/src/: ClassFactory.cpp  ClassFactory.h  FitsProps.propdesc  Guids.h  PreviewHandler.cpp  PreviewHandler.h  PropertyHandler.cpp  PropertyHandler.h  Registration.cpp  Registration.h  StreamBuffer.cpp  StreamBuffer.h  ThumbnailProvider.cpp  ThumbnailProvider.h  dllmain.cpp  shell_ext.def  shell_ext.rc
tests/: CMakeLists.txt  integration_analysis.cpp  integration_cache.cpp  integration_fits_loader.cpp  integration_raw.cpp  integration_xisf.cpp  smoke_shell_ext.cpp  smoke_viewer.cpp  unit_cache_key.cpp  unit_debayer.cpp  unit_headers.cpp  unit_raw.cpp  unit_rotation.cpp  unit_stretch.cpp  unit_xisf_magic.cpp
tests/data/: README.md
tests/helpers/: synth_fits.cpp  synth_fits.h  synth_xisf.cpp  synth_xisf.h
tools/: CMakeLists.txt  raw_bench.cpp  xisf_bench.cpp
viewer/: CMakeLists.txt
viewer/src/: AberrationView.cpp  AberrationView.h  AnalysisView.cpp  AnalysisView.h  BackgroundView.cpp  BackgroundView.h  D2DPopup.h  HeaderView.cpp  HeaderView.h  Histogram.cpp  Histogram.h  InspectColor.h  InspectRotation.h  TiltView.cpp  TiltView.h  Toolbar.cpp  Toolbar.h  ViewerWindow.cpp  ViewerWindow.h  main.cpp  viewer.manifest  viewer.rc
